--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -1,38 +1,38 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: ingress-service
-#   annotations:
-#     kubernetes.io/ingress.class: nginx
-#     nginx.ingress.kubernetes.io/use-regex: "true"
-# spec:
-#   rules:
-#     - host: ticketing.com
-#       http:
-#         paths:
-#           - path: /api/users/?(.*)
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: auth-srv
-#                 port:
-#                   number: 3000
-# ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
-  labels:
-    name: ingress-service
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-  - host: ticketing.com
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/api/users/?(.*)"
-        backend:
-          service:
-            name: auth-srv
-            port: 
-              number: 3000
+    - host: ticketing.com
+      http:
+        paths:
+          - path: /api/users/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-srv
+                port:
+                  number: 3000
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: ingress-service
+#   labels:
+#     name: ingress-service
+# spec:
+#   rules:
+#   - host: ticketing.com
+#     http:
+#       paths:
+#       - pathType: Prefix
+#         path: /api/users/?(.*)
+#         backend:
+#           service:
+#             name: auth-srv
+#             port: 
+#               number: 3000
