--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,7 +3,7 @@ kind: Config
 deploy:
   kubectl:
     manifests:
-     -  ./infra/k8s/*
+      - ./infra/k8s/*
 build:
   local:
     push: false
@@ -14,6 +14,5 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - dest: .
-            src: 'src/**/*.ts'
-  
+          - src: 'src/**/*.ts'
+            dest: .
